[tool.poetry]
name = "python-multiplayer"
version = "0.1.2"
description = "Server Client Structure for Python"
authors = [
    "dpfurners <dpfurner@tsn.at>",
    "kloaChristoph <christoph.alexander.holas@gmail.com>"
]
readme = "README.md"
packages = [{include = "py_mp", from = "src"}]
repository = "https://github.com/BroCodeAT/python-multiplayer"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
