[tool.poetry]
name = "python-multiplayer"
version = "0.1.2"
description = "Server Client Structure for Python"
authors = [
    "dpfurners <dpfurner@tsn.at>",
    "kloaChristoph <christoph.alexander.holas@gmail.com>"
]
readme = "README.md"
packages = [{include = "py_mp", from = "src"}]
repository = "https://github.com/BroCodeAT/python-multiplayer"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = {version = "^6.1.3", optional = true}
furo = {version = "^2022.12.7", optional = true}
numpydoc = {version = "^1.5.0", optional = true}


[tool.poetry.extras]
docs = ["sphinx", "furo", "numpydoc"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
